# ProjectGDAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  main.cpp
include/: config.h  configLoader.h  transformer.h
src/: configLoader.cpp  main.cpp
src/config/: config.cpp  config.h
src/gdal/: GdalDataset.cpp  GdalDataset.h  GdalUtils.cpp  GdalUtils.h
src/pipeline/: pipeline.cpp  pipeline.h
src/transform/: transformer.cpp  transformer.h
